# python-template

./: README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .gitignore  Dockerfile  README.md
{{ cookiecutter.project_name }}/.devcontainer/: devcontainer.json
{{ cookiecutter.project_name }}/notebooks/: hello.ipynb
{{ cookiecutter.project_slug }}/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json  docker-compose.yml
{{ cookiecutter.project_slug }}/notebooks/: fib.ipynb
{{ cookiecutter.project_slug }}/tests/: test_example.py  test_fib.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: fib.py
