[project]
name = "my-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "seaborn>=0.13.2",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]


[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # isort
  "I",
  # pep8-naming
  "N",
  # flake8-annotations
  "ANN",
  # flake8-boolean-trap
  "FBT",
  # pandas-vet
  "PD",
  # NumPy-specific rules
  "NPY",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
